--- a/apps/costcontrol/message_handler.html
+++ b/apps/costcontrol/message_handler.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="shared/js/settings_listener.js"></script>
   <script type="text/javascript" src="shared/js/lazy_loader.js"></script>
   <script type="text/javascript" src="js/utils/debug.js"></script>
+  <script type="text/javascript" src="js/sms_manager.js"></script>
   <script type="text/javascript" src="js/utils/toolkit.js"></script>
   <script type="text/javascript" src="js/utils/formatting.js"></script>
   <script type="text/javascript" src="js/common.js"></script>
